bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:1: error: Missing closing brace `}' assumed here
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^ParotTrouble:1: error: expected class or object definition
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
^